deploy/namespaces/pompetrack-core/netpol/05-pompetrack-core-allow-egress-to-minio-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-minio-api
  namespace: pompetrack-core
spec:
  podSelector: {}   # tous les pods du namespace (inclut les Jobs)
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: minio
      ports:
        - protocol: TCP
          port: 9000
