deploy/namespaces/pompetrack-core/netpol/07-allow-ingestion-ingress-from-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingestion-ingress-from-namespace
  namespace: pompetrack-core
spec:
  podSelector:
    matchLabels:
      app: ingestion
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pompetrack-core
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-ingestion
  namespace: pompetrack-core
spec:
  podSelector: {}   # tous les pods du namespace
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ingestion
      ports:
        - protocol: TCP
          port: 80
