deploy/namespaces/pompetrack-core/netpol/08-allow-traefik-to-streamlit.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-to-streamlit
  namespace: pompetrack-core
spec:
  podSelector:
    matchLabels:
      app: streamlit
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - protocol: TCP
      port: 8501
