deploy/namespaces/pompetrack-core/netpol/13-allow-streamlit-egress-to-worker-stream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-streamlit-egress-to-worker-stream
  namespace: pompetrack-core
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: streamlit
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: worker-stream
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 15006
