deploy/namespaces/pompetrack-core/netpol/15-allow-istio-plumbing-intra-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-plumbing-intra-namespace
  namespace: pompetrack-core
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 15001
        - protocol: TCP
          port: 15006
        - protocol: TCP
          port: 15021
        - protocol: TCP
          port: 15090
        - protocol: TCP
          port: 5432
  egress:
    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 15001
        - protocol: TCP
          port: 15006
        - protocol: TCP
          port: 15021
        - protocol: TCP
          port: 15090
        - protocol: TCP
          port: 5432
