deploy/namespaces/pompetrack-core/netpol/19-allow-airflow-to-minio-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-airflow-to-minio-api
  namespace: pompetrack-core
spec:
  podSelector:
    matchLabels:
      app: minio
      release: pompetrack-core
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: airflow
      ports:
        - protocol: TCP
          port: 9000
