deploy/namespaces/pompetrack-core/netpol/21-allow-streamlit-egress-to-internet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-streamlit-egress-to-internet
  namespace: pompetrack-core
spec:
  podSelector:
    matchLabels:
      app: streamlit
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 443
      protocol: TCP
