deploy/namespaces/pompetrack-core/netpol/22-allow-traefik-ti-ingestion.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-to-ingestion
  namespace: pompetrack-core
spec:
  podSelector:
    matchLabels:
      service.istio.io/canonical-name: ingestion
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - protocol: TCP
      port: 80
